[gd_scene load_steps=5 format=3 uid="uid://m6sl3gdmf5u"]

[ext_resource type="PackedScene" uid="uid://bqb4clljctdas" path="res://presentation/components/ImageButton/ImageButton.tscn" id="1_m0kxj"]
[ext_resource type="Script" path="res://presentation/views/workspace/project/ProjectListItem.gd" id="1_mbnsj"]
[ext_resource type="Texture2D" uid="uid://2hxwovhy761p" path="res://presentation/img/pin-02.svg" id="2_ss7v4"]
[ext_resource type="Texture2D" uid="uid://cl4q0ku48stuc" path="res://presentation/img/trash-02.svg" id="3_cq8mt"]

[node name="ProjectListItem" type="PanelContainer"]
custom_minimum_size = Vector2(0, 40)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 8.0
grow_horizontal = 2
script = ExtResource("1_mbnsj")

[node name="Button" type="Button" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Button"]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="ButtonPin" parent="Button/HBoxContainer" instance=ExtResource("1_m0kxj")]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
image_texture = ExtResource("2_ss7v4")

[node name="Spacer" type="Control" parent="Button/HBoxContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
mouse_filter = 1

[node name="CenterContainer" type="CenterContainer" parent="Button/HBoxContainer"]
layout_mode = 2

[node name="LabelName" type="Label" parent="Button/HBoxContainer/CenterContainer"]
layout_mode = 2
mouse_filter = 1
text = "Name"

[node name="Spacer2" type="Control" parent="Button/HBoxContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
mouse_filter = 1

[node name="CenterContainer2" type="CenterContainer" parent="Button/HBoxContainer"]
layout_mode = 2

[node name="LabelPath" type="Label" parent="Button/HBoxContainer/CenterContainer2"]
layout_mode = 2
mouse_filter = 1
text = "Path/to/project"

[node name="Spacer3" type="Control" parent="Button/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="ButtonDelete" parent="Button/HBoxContainer" instance=ExtResource("1_m0kxj")]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
image_texture = ExtResource("3_cq8mt")
